# memory-master

./: .githubworkflowsandroid-build.yml  .githubworkflowsbuild.yml  app.py  pyproject.toml
.github/workflows/: main.yml
memorymaster/: words.txt
