[build-system]
requires = ["briefcase>=0.3.0"]
build-backend = "briefcase.backend"

[tool.briefcase]
project_name = "Memory Master"
bundle = "org.memorymaster"
version = "0.1.0"
url = "https://github.com/Tima-land/memory-master"
author = "Your Name"
author_email = "your@email.com"
license.file = "LICENSE"

[tool.briefcase.app.memorymaster]
formal_name = "Memory Master"
description = "Тренажер для запоминания слов"
sources = ["memorymaster"]
requires = ["toga-android", "pygame"]

[tool.briefcase.app.memorymaster.package]
include-package-data = true
