name: Android Full Build Pipeline
on: 
  push:
    branches: [main]
  workflow_dispatch:

jobs:
  build:
    runs-on: ubuntu-latest
    timeout-minutes: 120

    steps:
      - name: Checkout repository
        uses: actions/checkout@v4
        with:
          fetch-depth: 0

      - name: Verify project files
        run: |
          [ -f "app.py" ] || [ -f "main.py" ] || [ -f "src/app.py" ] || [ -f "src/main.py" ] || {
            echo "::error::No main Python file found!"
            exit 1
          }

      - name: Setup Python
        uses: actions/setup-python@v4
        with:
          python-version: "3.11"

      - name: Install system tools
        run: |
          sudo apt-get update -y
          sudo apt-get install -y \
            openjdk-17-jdk \
            libsdl2-dev \
            wget unzip

      - name: Setup Gradle
        run: |
          wget -q https://services.gradle.org/distributions/gradle-7.6-bin.zip -P /tmp
          sudo unzip -q /tmp/gradle-7.6-bin.zip -d /opt
          sudo ln -sf /opt/gradle-7.6/bin/gradle /usr/bin/gradle

      - name: Prepare project
        run: |
          mkdir -p src/main/python
          mv *.py src/main/python/ 2>/dev/null || true
          [ ! -f "pyproject.toml" ] && cat > pyproject.toml <<EOF
          [build-system]
          requires = ["briefcase>=0.3.0"]
          build-backend = "briefcase.backend"
          EOF

      - name: Build package
        run: |
          export SDL2_DIR=/usr/lib/x86_64-linux-gnu/cmake/SDL2
          briefcase create android -v
          briefcase build android -v

      - name: Upload artifacts
        uses: actions/upload-artifact@v4
        with:
          name: app-build
          path: |
            android/**/outputs/apk/**/*.apk
            android/**/outputs/bundle/**/*.aab

      - name: Archive logs
        if: always()
        uses: actions/upload-artifact@v4
        with:
          name: build-logs
          path: android/**/*.log
